@@ -4,9 +4,9 @@ makeRLearner.classif.LiblineaRL2LogReg = function() {
     cl = "classif.LiblineaRL2LogReg",
     package = "LiblineaR",
     par.set = makeParamSet(
-      makeDiscreteLearnerParam(id = "type", values = c(0L, 7L)),
+      makeDiscreteLearnerParam(id = "type", default = 0L, values = c(0L, 7L)),
       makeNumericLearnerParam(id = "cost", default = 1, lower = 0),
-            # FIXME: Add default value when parameter dependent defaults are implemented:
+      # FIXME: Add default value when parameter dependent defaults are implemented:
       ## if type = 0: eps default = 0.01, if type = 7: eps default = 0.1
       makeNumericLearnerParam(id = "epsilon", lower = 0),
       makeLogicalLearnerParam(id = "bias", default = TRUE),
@@ -14,11 +14,12 @@ makeRLearner.classif.LiblineaRL2LogReg = function() {
       makeIntegerLearnerParam(id = "cross", default = 0L, lower = 0L, tunable = FALSE),
       makeLogicalLearnerParam(id = "verbose", default = FALSE, tunable = FALSE)
     ),
+    par.vals = list(type = 0L),
     properties = c("twoclass", "multiclass", "numerics", "class.weights", "prob"),
     class.weights.param = "wi",
     name = "L2-Regularized Logistic Regression",
     short.name = "liblinl2logreg",
-    note = "type 0 is primal and type 7 is dual problem"
+    note = "type 0 (the default) is primal and type 7 is dual problem"
   )
 }
 
