@@ -24,6 +24,12 @@ test_that("regr_LiblineaRL2L2SVR", {
      p = predict(m, newx = regr.num.test[, -regr.num.class.col])
      old.predicts.list[[i]] = p$predictions
    }
+   parset.list = list(
+    list(svr_eps = 0.01),
+    list(type = 12, svr_eps = 0.1),
+    list(cost = 5L),
+    list(type = 12, cost = 5L)
+    )
 
    testSimpleParsets("regr.LiblineaRL2L2SVR", regr.num.df, regr.num.target,
     regr.num.train.inds, old.predicts.list, parset.list)
